--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,141 @@
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/tailwind-output.css">
 </head>
-<body>
-    
+
+<body class="text-gray-600 font-body">
+    <div class="grid md:grid-cols-5"> <!-- content wrapper -->
+        <div class="col-span-4 md:col-span-1 md:flex md:justify-end">
+            <nav class="text-right">
+                <div class="flex justify-between items-center">
+                    <h1 class="font-bold uppercase p-4 border-b border-gray-100">
+                        <a href="#">Food Ninja</a>
+                    </h1>
+                    <div class="px-4 cursor-pointer md:hidden" id="burger">
+                        <svg class="w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                            class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                        </svg>
+                    </div>
+                </div>
+                <ul class="text-sm mt-6 hidden md:block" id="menu">
+                    <li class="text-gray-700 font-bold border-r-4 border-primary">
+                        <a class="px-4 flex justify-end" href="#">
+                            <span>Home</span>
+                            <svg class="w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+                            </svg>
+
+                        </a>
+                    </li>
+                    <li class="border-r-4 border-white">
+                        <a class="px-4 flex justify-end mt-4" href="#">
+                            <span>About</span>
+                            <svg class="w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+                            </svg>
+
+                        </a>
+                    </li>
+                    <li class="border-r-4 border-white mb-4">
+                        <a class="px-4 flex justify-end mt-4" href="#">
+                            <span>Contact</span>
+                            <svg class="w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 0 1-.825-.242m9.345-8.334a2.126 2.126 0 0 0-.476-.095 48.64 48.64 0 0 0-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0 0 11.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
+                            </svg>
+
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div> <!-- end nav -->
+        <main class="px-16 py-6 bg-gray-100 col-span-4">
+            <div class="flex justify-center md:justify-end">
+                <a href="#"
+                    class="text-primary btn border-primary md:border-2 md:hover:bg-primary md:hover:text-white transition-all">Log
+                    in</a>
+                <a href="#"
+                    class="text-primary ml-3 btn border-primary md:border-2 md:hover:bg-primary md:hover:text-white transition-all">Sign
+                    up</a>
+            </div>
+            <header>
+                <h2 class="font-semibold text-4xl">Recipes</h2>
+                <h3 class="font-semibold text-2xl">For Ninjas</h3>
+            </header>
+            <div>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
+
+                <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                    <!-- cards go here -->
+                    <div class="card">
+                        <img class="w-full h-32 sm:h-48 object-cover" src="images/dist/stew.avif"
+                            alt="5 Bean Chilli Stew">
+                        <div class="m-4">
+                            <span class="font-bold">5 Bean Chilli Stew</span>
+                            <span class="block text-gray-500">Recipe by Mario</span>
+                        </div>
+                        <div class="budge">
+                            <svg class="w-5 inline-block" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                            </svg>
+
+                            <span>25 min</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="w-full h-32 sm:h-48 object-cover" src="images/dist/noodles.avif" alt="Vege Noodles">
+                        <div class="m-4">
+                            <span class="font-bold">Vege Noodles</span>
+                            <span class="block text-gray-500">Recipe by Mario</span>
+                        </div>
+                        <div class="budge">
+                            <svg class="w-5 inline-block" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                            </svg>
+                            <span>30 min</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="w-full h-32 sm:h-48 object-cover" src="images/dist/curry.avif" alt="Tofu Curry">
+                        <div class="m-4">
+                            <span class="font-bold">Tofu Curry</span>
+                            <span class="block text-gray-500">Recipe by Mario</span>
+                        </div>
+                        <div class="budge">
+                            <svg class="w-5 inline-block" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                            </svg>
+                            <span>20 min</span>
+                        </div>
+                    </div>
+                </div>
+
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most popular</h4>
+
+                <div class="mt-8">
+                    <!-- cards go here -->
+                </div>
+
+                <div class="flex justify-center"> <!--button-->
+                    <div class="bg-secondary-100 text-secondary-200 btn hover:shadow transition-all">Load more</div>
+                </div>
+            </div>
+        </main>
+    </div>
+
+    <script src="js/main.min.js"></script>
 </body>
+
 </html>
